--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@tanstack/react-table": "^8.11.8",
+    "axios": "^1.6.7",
     "classnames": "^2.5.1",
     "primereact": "^10.5.0",
     "react": "^18.2.0",
