--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "primeicons": "^6.0.1",
     "primereact": "^10.5.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "toast": "^0.5.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
