--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "primereact": "^10.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.1",
     "react-toastify": "^10.0.4",
     "toast": "^0.5.4"
   },
